feat: 운영 도메인 대응 — API 주소/CORS 외부화
- frontend/.env.production: VITE_API_BASE_URL 을 운영 도메인으로 설정
- SecurityConfig: CORS 허용 출처를 app.cors.allowed-origins 설정값으로 외부화
  (기본 localhost, 운영은 APP_CORS_ALLOWED_ORIGINS 환경변수 주입)
- kakao redirect-uri / frontend-callback-uri 는 기존 ${} 참조라 서버 환경변수로 주입

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>